--- a/kahootADI/.classpath
+++ b/kahootADI/.classpath
@@ -6,5 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/super/Baixades/lipermi-0.4 (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
