--- a/kahootADI/.classpath
+++ b/kahootADI/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/super/Baixades/lipermi-0.4 (1).jar"/>
+	<classpathentry kind="lib" path="C:/Users/alexl/OneDrive/Escritorio/CICLOS/AMS2/PROJECTES/KahootADI/DESKTOP/V2/lipermi-0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
